@@ -14,7 +14,7 @@ not run its Makefile.PL or Build.PL.
 -----BEGIN PGP SIGNED MESSAGE-----
 Hash: SHA1
 
-SHA1 8daa8b245d0271dc7240b1c5c60aa3be1c24f616 ChangeLog
+SHA1 9507de55c497b13e92e184d0113b1f6bd2c80af4 ChangeLog
 SHA1 d7f05f3c29deb4f29dd9291d5076899b3f92cd20 FIGlet_fonts/3-d.flf
 SHA1 8238eb029ef0be3083cd5982100b4000bd8aacb8 FIGlet_fonts/4x4_offr.flf
 SHA1 f3223bb52e36d14098e1ed1f7790593a09230d68 FIGlet_fonts/5lineoblique.flf
@@ -92,8 +92,8 @@ SHA1 5939c33dff38893a1dcf0ba68b97845f7c63e1fa FIGlet_fonts/wavy.flf
 SHA1 f81af8fd43e0f19c168343709749ef4da3972e6d FIGlet_fonts/weird.flf
 SHA1 62647027745e394450492878f8d8730548d83fa2 LICENSE
 SHA1 3969a1b82753ea591ce1b77ed0ccf1403b480052 MANIFEST
-SHA1 e5ebcdfe3ee647a5ee107bea3f8bca6d04c72d6f META.yml
-SHA1 2d477f105f7bd16616766b07fe712a8428af7a55 Makefile.PL
+SHA1 3dd868fa1fd90593802afa44d85de17263432cff META.yml
+SHA1 5aeb86c4a330a5c0f726431ede7fd1fa9c9e0046 Makefile.PL
 SHA1 05aead0f26b0f71a00bad5badbf390f2c92dcd1d README
 SHA1 ecb089134bba590f02aa974be5a6e86d72cdb0dc UNINSTALL_CYGWIN
 SHA1 ade875b98aca4971a381d2e037ed009b52c2f8da bin/fullauto.pl
@@ -122,7 +122,7 @@ SHA1 6fed559b971e9d2f091e0776ddbb131be5225a36 inc/Module/Install/Win32.pm
 SHA1 ea528c813c3473a2674fcbed06531c2f795116ce inc/Module/Install/WriteAll.pm
 SHA1 00bb8470354d11bd7c2c74633083ebe627eb2b7e inc/Module/Install/with.pm
 SHA1 e1d3650b6801a3cb2e6de38574e9327914c96d40 install_mozrepl_plugin.ahk
-SHA1 b99e63e218111c43021089666cd100087020ee17 lib/Net/FullAuto.pm
+SHA1 56ad05e617aa80a2121d32eeba54fb3bcba8dbde lib/Net/FullAuto.pm
 SHA1 cc3f8588c96516de2802c68be465447d17f781aa lib/Net/FullAuto/Custom/BackUp/README
 SHA1 5032ba28f88dbf163b0d4dd158948af9124568c9 lib/Net/FullAuto/Custom/README
 SHA1 5b1702f20efb104e3375934cf55a7438c19e109a lib/Net/FullAuto/Distro/fa_code.pm
@@ -139,11 +139,11 @@ SHA1 6fac6b17647d05b71441ac3783ceec38b9b71fa6 t/test.t
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v1
 
-iQEcBAEBAgAGBQJTzQyrAAoJEBa/9Pad787E7QIIAMG+5SLP55Re0kd2pzs03tx7
-sPCvscdjRO+fNatq9O3PBsozYU8F+YYkoRFpoNnnyO8pcfdV4Hd+1+PGR3KJ0rpk
-TEDvGvkPy3NJkhWccGw//tBeDXb4QQJ4K1shQIuDdhE2tl87SBG+PH6lvGGdJUko
-hWJazB53AY2gEvv+X3axaQuS+fRNrs3HCbJrj2A17zyt6/LB8KPjRzmQdlVJf9/z
-BSvyZZgjs5HjyOSUnKWV6fZWsbvr4aZ1VMFxaPUTBZ84JzWhNKIOizwxfzkatIXy
-rOEnxUHbtMrMQp4LQPemGGQjUVUCtAScX5SVDOXeLR7N6lFfDlQDVTdb4jDg34Q=
-=1Xf2
+iQEcBAEBAgAGBQJTzR+xAAoJEBa/9Pad787EgdoH/igj9EW57ZNXsg3DyzfADdN4
+nF+zNNe89kW9CRz4+qlFu9UPlI3CAQXSKY2Jp/ePQ158deFN89BuoDeBisPT4QGo
+/bgiWsvAwo+QYkxVR3fyBUQVpdcYP7AqTnp55M7plcNJQdy+OUE3aHJiMUoqg65E
+Ke092G4t2COMCe5IbZlCzhHfu9elYb3sITB59w+AIksXnli67YMcHnHK7WvtOApM
+cXltEt7iJ8LpyLzlERrne0mUXCAsAP/jBhV94h7kEwEwxxa8MGdCI65/IlFzjQ2A
+qF9gzRpkHB9zF2l75rZyJGdesQVCUvM3nUfYu4DeAizpMWREw8YV7IynxHxTtMo=
+=yZPu
 -----END PGP SIGNATURE-----
