@@ -22,7 +22,7 @@ package Net::FullAuto;
 #######################################################################
 
 
-our $VERSION='0.9999999963';
+our $VERSION='0.9999999964';
 
 
 use 5.005;
