@@ -22,6 +22,13 @@
 
 2014-07-21  Brian M. Kelly  <Brian.Kelly@fullautosoftware.com>
 
+        * Version 0.9999999964 released.
+
+        * Fixed Makefile.PL for FreeBSD.
+
+
+2014-07-21  Brian M. Kelly  <Brian.Kelly@fullautosoftware.com>
+
         * Version 0.9999999963 released.
 
         * Fixed Makefile.PL for FreeBSD.
